docs(release): CHANGELOG entry for 0.23.5; bump README + tutorials to 0.23.5
Covers the three skainet-cli Vector API fixes that landed since 0.23.4
(launcher script flags, dequantize-at-load fallback, accurate backend
label) and updates the BOM coordinate in the README's "Current release"
snippet plus both tutorial pages.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>